src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alt E-Mail Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BIRTH_DATE__c</fullName>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Death_Date__c</fullName>
        <label>Death Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <label>Employer Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Occupation__c</fullName>
        <label>Employer Occupation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extended_Name__c</fullName>
        <label>Extended Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ID_1_Description__c</fullName>
        <label>ID 1 Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_1_Expiration_Date__c</fullName>
        <label>ID 1 Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ID_1_Issuance_Date__c</fullName>
        <label>ID 1 Issuance Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ID_1_Number__c</fullName>
        <label>ID 1 Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_1_Type__c</fullName>
        <label>ID 1 Type</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ID_1_Verification_Date__c</fullName>
        <label>ID 1 Verification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ID_2_Description__c</fullName>
        <label>ID 2 Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_2_Expiration_Date__c</fullName>
        <label>ID 2 Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ID_2_Issuance_Date__c</fullName>
        <label>ID 2 Issuance Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ID_2_Number__c</fullName>
        <label>ID 2 Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_2_Type__c</fullName>
        <label>ID 2 Type</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ID_2_Verification_Date__c</fullName>
        <label>ID 2 Verification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ID_3_Description__c</fullName>
        <label>ID 3 Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_3_Expiration_Date__c</fullName>
        <label>ID 3 Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ID_3_Issuance_Date__c</fullName>
        <label>ID 3 Issuance Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ID_3_Number__c</fullName>
        <label>ID 3 Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_3_Type__c</fullName>
        <label>ID 3 Type</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ID_3_Verification_Date__c</fullName>
        <label>ID 3 Verification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initial_Record__c</fullName>
        <label>Initial Record</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <label>LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mothers_Maiden_Name__c</fullName>
        <label>Mothers Maiden Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MultiAddress__c</fullName>
        <label>MultiAddress</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MultiDOB__c</fullName>
        <label>MultiDOB</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MultiMMN__c</fullName>
        <label>MultiMMN</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MultiSSN__c</fullName>
        <label>MultiSSN</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multi_Name__c</fullName>
        <label>Multi_Name</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Format__c</fullName>
        <label>NAME FORMAT</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonID__c</fullName>
        <description>This field will be used to uniquely identify a Person.</description>
        <externalId>true</externalId>
        <label>PersonID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Phone_Type__c</fullName>
        <label>Phone Type</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Residential_City__c</fullName>
        <label>Residential City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Country_Code__c</fullName>
        <label>Residential Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Country__c</fullName>
        <label>Residential Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Extra_Address__c</fullName>
        <label>Residential Extra Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_State__c</fullName>
        <label>Residential State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Street__c</fullName>
        <label>Residential Street</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Zipocde__c</fullName>
        <label>Residential Zipcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSN_Last_4__c</fullName>
        <label>SSN Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSN_TIN_Encrypted__c</fullName>
        <label>SSN-TIN</label>
        <length>9</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>SSN_TIN_Type__c</fullName>
        <label>SSN/TIN TYPE</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>Sex</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone_Extension__c</fullName>
        <label>Work Phone Extension</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>